# nbs-player-rs

./: .gitmodules  Cargo.toml  README.md  build.sh  index.html  readme.md
bevy/src/: lib.rs  notes.rs  piano.rs  song.rs
bevy/test-assets/: Note Block Megacollab.nbs
ray-lib/: Cargo.toml
ray-lib/src/: main.rs  note.rs  piano.rs  song.rs
ray-lib/test-assets/: Metropolis of Illusion.nbs
src/: audio.rs  font.rs  lib.rs  main.rs  main_old.rs  nbs_player.rs  note.rs  notes.rs  piano.rs  song.rs  textures.rs  theme.rs  utils.rs
test-assets/: Bad Piggies Theme.nbs  Rush E.nbs
