[package]
name = "nbs-player-rs"
version = "0.1.0"
edition = "2024"
description = "A simple NBS player written in Rust"
license = "AGPL-3.0 license"
repository = ""

[dependencies]
nbs-rs = { git = "https://github.com/tomast1337/nbs-rs.git"}
log = "0.4.26"
kira = "0.10.4"
zip = { version = "2.4.1" , default-features = false, features = [ "deflate" ] }
raylib = "5.0.2"



#[lib]
#crate-type = ["cdylib", "rlib"]

